trunk/Archive2/57/51887bad0f067b/output
main.cpp:22:5: error: no matching function for call to 'insertionSort'
    insertionSort<T, E>(element, size);
    ^~~~~~~~~~~~~~~~~~~
main.cpp:27:3: note: in instantiation of function template specialization 'insertionSort<std::greater, int>' requested here
  insertionSort<std::greater>(A, 7);
  ^
main.cpp:5:6: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'COMP'
void insertionSort(T* elements, int size) {
     ^
main.cpp:20:6: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'E'
void insertionSort(T* element, int size)
     ^
1 error generated.
